[gd_scene load_steps=43 format=2]

[ext_resource path="res://src/Important/Sensitivity/SensShow.gd" type="Script" id=1]
[ext_resource path="res://src/Important/Targets/ShowSpeed.gd" type="Script" id=2]
[ext_resource path="res://Levels/Speed/ScoreCounterSpeed.gd" type="Script" id=3]
[ext_resource path="res://Levels/Speed/Speed.gd" type="Script" id=4]
[ext_resource path="res://Pausemenu/GUI.gd" type="Script" id=5]
[ext_resource path="res://Assets/Textures/Cube.png" type="Texture" id=6]
[ext_resource path="res://src/Important/background.PNG" type="Texture" id=7]
[ext_resource path="res://Levels/Speed/TargetManagerSpeed.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Important/Player/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Important/Player/Scene/Ground.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/Hard/Score.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Important/Sensitivity/Sens.tscn" type="PackedScene" id=12]
[ext_resource path="res://Pausemenu/GUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Important/Speed/speed.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/Speed/timer.tscn" type="PackedScene" id=15]
[ext_resource path="res://Levels/Speed/Timer.gd" type="Script" id=16]
[ext_resource path="res://Levels/Speed/ScoreView.gd" type="Script" id=17]
[ext_resource path="res://Pictures/Qatar-Gets-A-Forest.png" type="Texture" id=18]
[ext_resource path="res://Levels/Speed/HistoryShow.tscn" type="PackedScene" id=19]
[ext_resource path="res://Levels/Speed/ShowHistory.gd" type="Script" id=20]
[ext_resource path="res://Levels/Speed/History.gd" type="Script" id=21]
[ext_resource path="res://Levels/Speed/LastHistory.tscn" type="PackedScene" id=22]
[ext_resource path="res://Levels/Speed/TargetFakeSpeed.tscn" type="PackedScene" id=23]
[ext_resource path="res://Levels/Speed/TargetFakeSpeed2.gd" type="Script" id=24]
[ext_resource path="res://Levels/Speed/TargetFakeSpeed3.gd" type="Script" id=25]
[ext_resource path="res://Levels/Speed/TargetFakeSpeed4.gd" type="Script" id=26]

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("World/Sprite3D/Timer")

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.67451, 0.67451, 0.67451, 1 )
albedo_texture = ExtResource( 18 )
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 14 )
size = Vector3( 75, 23.3, 2 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -40, 7.5, 1, 40, 7.5, -1, 40, 7.5, 1, -40, 7.5, -1, -40, -7.5, 1, 40, -7.5, -1, 40, -7.5, 1, -40, -7.5, -1, 40, 7.5, 1, -40, 7.5, -1, 40, 7.5, -1, -40, 7.5, 1, 40, -7.5, 1, -40, -7.5, -1, 40, -7.5, -1, -40, -7.5, 1, 40, 7.5, 1, -40, -7.5, 1, -40, 7.5, 1, 40, -7.5, 1, 40, 7.5, -1, -40, -7.5, -1, -40, 7.5, -1, 40, -7.5, -1 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 110, 30 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 75, 2, 100 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 3, 6, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 15 )
size = Vector3( 7, 21, 7 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -3.5, 10, 3.5, 3.5, 10, -3.5, 3.5, 10, 3.5, -3.5, 10, -3.5, -3.5, -10, 3.5, 3.5, -10, -3.5, 3.5, -10, 3.5, -3.5, -10, -3.5, 3.5, 10, 3.5, -3.5, 10, -3.5, 3.5, 10, -3.5, -3.5, 10, 3.5, 3.5, -10, 3.5, -3.5, -10, -3.5, 3.5, -10, -3.5, -3.5, -10, 3.5, 3.5, 10, 3.5, -3.5, -10, 3.5, -3.5, 10, 3.5, 3.5, -10, 3.5, 3.5, 10, -3.5, -3.5, -10, -3.5, -3.5, 10, -3.5, 3.5, -10, -3.5 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("World/ScoreCounter")

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("World/Sens2")

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("World/Speed/ShowSpeed")

[sub_resource type="ViewportTexture" id=19]
viewport_path = NodePath("World/History/ShowHistory")

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("World/Last/Viewport")

[sub_resource type="PanoramaSky" id=16]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 16 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="GUI" parent="." instance=ExtResource( 13 )]
script = ExtResource( 5 )

[node name="World" type="Spatial" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="World"]
transform = Transform( 4.58613, 0, 0, 0, 4.2417, 0, 0, 0, 0.94835, 0, 20.4874, 48.3647 )
flip_h = true
flip_v = true
texture = SubResource( 17 )

[node name="Timer" type="Viewport" parent="World/Sprite3D"]
size = Vector2( 516, 256 )
transparent_bg = true
script = ExtResource( 16 )

[node name="Timer" parent="World/Sprite3D/Timer" instance=ExtResource( 15 )]

[node name="Timers" type="Timer" parent="World/Sprite3D/Timer"]

[node name="Player" parent="World" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 1.2, -42 )

[node name="TargetManager" parent="World" instance=ExtResource( 8 )]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0, 0, 38.1685 )
visible = false

[node name="TargetFake" parent="World" instance=ExtResource( 23 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 9.1898, 2.5529, 38.6912 )
visible = false

[node name="TargetFake2" parent="World" instance=ExtResource( 23 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 3.21966, 2.68469, 47 )
visible = false
script = ExtResource( 24 )

[node name="TargetFake3" parent="World" instance=ExtResource( 23 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.4493, 2.58695, 47 )
visible = false
script = ExtResource( 25 )

[node name="TargetFake4" parent="World" instance=ExtResource( 23 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -9.73057, 2.58695, 47 )
visible = false
script = ExtResource( 26 )

[node name="Level" type="Spatial" parent="World"]

[node name="Room" type="Spatial" parent="World/Level"]

[node name="Ground" parent="World/Level/Room" instance=ExtResource( 10 )]

[node name="Wall" type="StaticBody" parent="World/Level/Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.6729, 49.5482 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Room/Wall"]
mesh = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Room/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.154785 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall2" type="StaticBody" parent="World/Level/Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.6729, -50.011 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Room/Wall2"]
visible = false
mesh = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Room/Wall2"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall3" type="StaticBody" parent="World/Level/Room"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -38.4729, 11.6729, -0.0291157 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Room/Wall3"]
visible = false
mesh = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Room/Wall3"]
transform = Transform( 1.23, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall4" type="StaticBody" parent="World/Level/Room"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 38.1441, 11.6729, -0.0291157 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Room/Wall4"]
visible = false
mesh = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Room/Wall4"]
transform = Transform( 1.23, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ceil" type="StaticBody" parent="World/Level/Room"]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Room/Ceil"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 26.0297, 0 )
mesh = SubResource( 4 )

[node name="Lights" type="Spatial" parent="World/Level"]

[node name="OmniLight" type="OmniLight" parent="World/Level/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19561, 22.8175, 0.115379 )
light_energy = 0.5
omni_range = 200.0

[node name="Obstacles" type="Spatial" parent="World/Level"]
visible = false

[node name="1x3x1" type="StaticBody" parent="World/Level/Obstacles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.545, 0, -22.3486 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Obstacles/1x3x1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
mesh = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Obstacles/1x3x1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="1x3x2" type="StaticBody" parent="World/Level/Obstacles"]
transform = Transform( 0.941934, 0, -0.335797, 0, 1, 0, 0.335797, 0, 0.941934, 25.5874, 0, -33.2733 )

[node name="MeshInstance" type="MeshInstance" parent="World/Level/Obstacles/1x3x2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
mesh = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="World/Level/Obstacles/1x3x2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreView" type="Sprite3D" parent="World"]
transform = Transform( -1, -8.74228e-08, -7.64274e-15, -8.74228e-08, 1, 8.74228e-08, 0, 8.74228e-08, -1, -1.01099, 8.9398, 48.13 )
visible = false
pixel_size = 0.1
texture = SubResource( 18 )
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="World/ScoreView"]

[node name="ScoreCounter" type="Viewport" parent="World"]
size = Vector2( 512, 256 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1
script = ExtResource( 3 )

[node name="Score" parent="World/ScoreCounter" instance=ExtResource( 11 )]

[node name="Timerdsa" type="Timer" parent="World/ScoreCounter"]

[node name="Sens" type="Sprite3D" parent="World"]
transform = Transform( 4.28934, 0, 0, 0, 4.28934, 0, 0, 0, 1, -33.5771, 20.4603, 48.5146 )
flip_h = true
flip_v = true
texture = SubResource( 12 )

[node name="Sens2" type="Viewport" parent="World"]
size = Vector2( 512, 256 )
transparent_bg = true
script = ExtResource( 1 )

[node name="Sens" parent="World/Sens2" instance=ExtResource( 12 )]

[node name="Speed" type="Sprite3D" parent="World"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 1, 30.0997, 19.2848, 48.489 )
visible = false
flip_h = true
flip_v = true
texture = SubResource( 13 )

[node name="ShowSpeed" type="Viewport" parent="World/Speed"]
size = Vector2( 512, 256 )
transparent_bg = true
script = ExtResource( 2 )

[node name="Speed" parent="World/Speed/ShowSpeed" instance=ExtResource( 14 )]

[node name="History" type="Sprite3D" parent="World"]
transform = Transform( 4.80409, 0, 0, 0, 4.80409, 0, 0, 0, 4.80409, 24.8882, 18.0395, 48.3667 )
visible = false
flip_h = true
flip_v = true
texture = SubResource( 19 )
script = ExtResource( 21 )

[node name="ShowHistory" type="Viewport" parent="World/History"]
size = Vector2( 516, 256 )
transparent_bg = true
script = ExtResource( 20 )

[node name="HistoryShow" parent="World/History/ShowHistory" instance=ExtResource( 19 )]

[node name="Last" type="Sprite3D" parent="World"]
transform = Transform( 4.47634, 0, 0, 0, 4.44341, 0, 0, 0, 4.59347, 25.6099, 17.4828, 48.1844 )
flip_h = true
flip_v = true
texture = SubResource( 20 )

[node name="Viewport" type="Viewport" parent="World/Last"]
size = Vector2( 512, 256 )
transparent_bg = true

[node name="LastHistory" parent="World/Last/Viewport" instance=ExtResource( 22 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[connection signal="timeout" from="World/Sprite3D/Timer/Timers" to="World/Sprite3D/Timer" method="_on_Timers_timeout"]
[connection signal="sens" from="World/Player" to="World/Sens2" method="_on_Player_sens"]
[connection signal="timeout" from="World/ScoreView/Timer" to="World/TargetManager" method="_on_Timer_timeout"]
[connection signal="timeout" from="World/ScoreView/Timer" to="World/TargetFake" method="_on_Timer_timeout"]
[connection signal="timeout" from="World/ScoreView/Timer" to="World/ScoreView" method="_on_Timer_timeout"]
[connection signal="acr" from="World/ScoreCounter" to="World/History/ShowHistory" method="_on_ScoreCounter_acr"]
[connection signal="scr" from="World/ScoreCounter" to="World/History/ShowHistory" method="_on_ScoreCounter_scr"]
[connection signal="time" from="World/ScoreCounter" to="World/History" method="_on_ScoreCounter_time"]
[connection signal="timeout" from="World/ScoreCounter/Timerdsa" to="World/ScoreCounter" method="_on_Timerdsa_timeout"]
